Bug 189664 - Missing icons in akregator
Summary: Missing icons in akregator
Status: RESOLVED FIXED
Alias: None
Product: akregator
Classification: Applications
Component: general (show other bugs)
Version: unspecified
Platform: Mandriva RPMs Unspecified
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-04-15 00:36 UTC by Nicolas L.
Modified: 2009-05-24 18:56 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas L. 2009-04-15 00:36:13 UTC
Version:            (using KDE 4.2.2)
Installed from:    Mandriva RPMs

Bug reported on mandriva bugzilla : https://qa.mandriva.com/show_bug.cgi?id=48656
Description of problem:

"Previous unread article" and "next unread article" miss an icon in akregator.
Instead they have the "question mark" icon.

I'm using the Oxygen icon them and laOra-Qt style.

Steps to Reproduce:
1. Right click on the toolbar in akregator and choose "configure toolbars"
2. Choose the "mailToolBar <akregator_part>" toolbar
3. "Previous unread article" and "next unread article" miss their icon
Comment 1 Teemu Rytilahti 2009-05-24 18:55:36 UTC
SVN commit 972349 by rytilahti:

- Add icons for previous/next unread feed/articles, similar to knode
- Change + to be the primary shortcut for next unread article instead of current =, to be consistent as the primary key is shown in the menu.

BUG:189664


 M  +5 -1      actionmanagerimpl.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=972349
Comment 2 Teemu Rytilahti 2009-05-24 18:56:50 UTC
SVN commit 972350 by rytilahti:

backport SVN commit 972349 by rytilahti:

- Add icons for previous/next unread feed/articles, similar to knode
- Change + to be the primary shortcut for next unread article instead of
current =, to be consistent as the primary key is shown in the menu.

CCBUG:189664



 M  +5 -1      actionmanagerimpl.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=972350