- Add icons for previous/next unread feed/articles, similar to knode - Change + to be the primary shortcut for next unread article instead of current =, to be consistent as the primary key is shown in the menu.

BUG:189664

svn path=/trunk/KDE/kdepim/akregator/; revision=972349